--- a/src/manifest.safari.json
+++ b/src/manifest.safari.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "author": "Ghostery",
   "name": "Ghostery",
   "short_name": "Ghostery",
@@ -25,7 +25,7 @@
     "64": "/icons/icon-64.png",
     "128": "/icons/icon-128.png"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "64": "/icons/icon-64.png",
       "128": "/icons/icon-128.png"
@@ -38,7 +38,8 @@
     "open_in_tab": true
   },
   "background": {
-    "page": "background/index.html",
+    "scripts": ["background/index.js"],
+    "type": "module",
     "persistent": false
   },
   "declarative_net_request" : {
@@ -62,63 +63,71 @@
   },
   "content_scripts": [
     {
+      "js": ["content_scripts/whotracksme/index.js"],
       "matches": ["http://*/*", "https://*/*"],
-      "run_at": "document_start",
-      "js": [
-        "content_scripts/whotracksme/index.js"
-      ]
+      "run_at": "document_start"
     },
     {
+      "js": ["content_scripts/adblocker.js"],
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/adblocker.js"
-      ],
       "all_frames": true
     },
     {
+      "js": ["content_scripts/adblocker-scriptlets.js"],
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/adblocker-scriptlets.js"
-      ],
       "all_frames": true
     },
     {
+      "js": ["content_scripts/autoconsent.js"],
       "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start",
-      "js": [
-        "content_scripts/autoconsent.js"
-      ],
       "all_frames": true
     },
     {
+      "js": ["content_scripts/notifications.js"],
       "matches": ["http://*/*", "https://*/*"],
-      "run_at": "document_start",
-      "js": [
-        "content_scripts/notifications.js"
-      ]
+      "run_at": "document_start"
     },
     {
+      "js": ["content_scripts/whotracksme/reporting.js"],
       "matches": ["http://*/*", "https://*/*"],
-      "run_at": "document_start",
-      "js": [
-        "content_scripts/whotracksme/reporting.js"
-      ]
+      "run_at": "document_start"
     },
     {
+			"js": ["content_scripts/youtube.js"],
       "matches": ["*://www.youtube.com/*"],
-      "run_at": "document_start",
-			"js": ["content_scripts/youtube.js"]
-		}
+      "run_at": "document_start"
+		},
+    {
+      "js": ["content_scripts/whotracksme/ghostery-whotracksme.js"],
+      "run_at": "background_execute_script"
+    },
+    {
+      "js": ["content_scripts/trackers-preview.js"],
+      "run_at": "background_execute_script"
+    },
+    {
+      "js": ["content_scripts/prevent-serp-tracking.js"],
+      "run_at": "background_execute_script"
+    }
   ],
   "web_accessible_resources": [
-    "content_scripts/whotracksme/ghostery-whotracksme.js",
-    "content_scripts/trackers-preview.js",
-    "content_scripts/prevent-serp-tracking.js",
-    "pages/trackers-preview/index.html",
-    "pages/onboarding/index.html",
-    "pages/notifications/youtube.html"
+    {
+      "resources": [
+        "pages/trackers-preview/index.html",
+        "pages/notifications/opera-serp.html"
+      ],
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "use_dynamic_url": true
+    },
+    {
+      "resources": ["pages/notifications/youtube.html"],
+      "matches": ["*://www.youtube.com/*"],
+      "use_dynamic_url": true
+    }
   ],
   "content_security_policy": "script-src 'self'",
   "browser_specific_settings": {
