--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,4 @@ updates:
           - "@wdio/*"
       adblocker:
         patterns:
-          - "@cliqz/adblocker*"
+          - "@ghostery/adblocker*"
