--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "start:update": "./scripts/update.sh",
     "debug": "npm run build -- --watch --debug",
     "licenses": "license-report --config=./.license-report-config.json > dist/licenses.html",
-    "lint": "eslint",
-    "addons-linter": "addons-linter dist",
+    "lint": "npm run lint:src && npm run lint:build",
+    "lint:src": "eslint",
+    "lint:build": "npm run build firefox && addons-linter dist",
     "test": "npm run wdio && npm run wdio:update",
     "wdio": "wdio tests/e2e/wdio.conf.js",
     "wdio:update": "wdio tests/e2e/wdio.update.conf.js",
