--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@wdio/spec-reporter": "^9.1.3",
     "addons-linter": "^7.3.0",
     "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "license-report": "^6.5.0",
