--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start:update": "./scripts/update.sh",
     "debug": "npm run build -- --watch --debug",
     "licenses": "license-report --config=./.license-report-config.json > dist/licenses.html",
-    "lint": "eslint",
+    "lint": "npm run lint:src && npm run lint:build",
+    "lint:src": "eslint",
+    "lint:build": "npm run build firefox && addons-linter dist",
     "test": "npm run wdio && npm run wdio:update",
     "wdio": "wdio tests/e2e/wdio.conf.js",
     "wdio:update": "wdio tests/e2e/wdio.update.conf.js",
@@ -31,7 +33,9 @@
     "@wdio/globals": "^9.1.2",
     "@wdio/mocha-framework": "^9.1.2",
     "@wdio/spec-reporter": "^9.1.3",
+    "addons-linter": "^7.3.0",
     "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
     "license-report": "^6.5.0",
