Support Chrome schema & minor fixes

--- a/src/manifest.chromium.json
+++ b/src/manifest.chromium.json
@@ -43,6 +43,9 @@
     "service_worker": "background/index.js",
     "type": "module"
   },
+  "storage": {
+    "managed_schema": "managed_storage.json"
+  },
   "declarative_net_request": {
     "rule_resources": [
       {
