--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "licenses": "license-report --config=./.license-report-config.json > dist/licenses.html",
     "lint": "npm run lint:src && npm run lint:build",
     "lint:src": "eslint",
-    "lint:build": "npm run build firefox && addons-linter dist",
+    "lint:build": "npm run build firefox -- --silent && addons-linter dist",
     "test": "npm run wdio && npm run wdio:update",
     "wdio": "wdio tests/e2e/wdio.conf.js",
     "wdio:update": "wdio tests/e2e/wdio.update.conf.js",
@@ -29,10 +29,10 @@
     "@eslint/js": "^9.15.0",
     "@types/chrome": "^0.0.283",
     "@wdio/browser-runner": "^9.2.1",
-    "@wdio/cli": "^9.2.1",
-    "@wdio/globals": "^9.1.2",
-    "@wdio/mocha-framework": "^9.1.2",
-    "@wdio/spec-reporter": "^9.1.3",
+    "@wdio/cli": "9.2.1",
+    "@wdio/globals": "9.2.1",
+    "@wdio/mocha-framework": "9.1.3",
+    "@wdio/spec-reporter": "9.2.2",
     "addons-linter": "^7.5.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
