chore(dev-deps): fix wdio runner version

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/chrome": "^0.0.284",
-    "@wdio/browser-runner": "^9.2.1",
+    "@wdio/browser-runner": "9.2.1",
     "@wdio/cli": "9.2.1",
     "@wdio/globals": "9.2.1",
     "@wdio/mocha-framework": "9.1.3",
