--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "locales": "npm run locales:setup && npm run locales.src",
     "xcode-export-locales": "rm -rf ./xcode/en.xcloc && xcodebuild -exportLocalizations -project ./xcode/Ghostery.xcodeproj -localizationPath ./xcode",
     "release": "./scripts/release.sh",
-    "update-scriptlets": "deno scripts/update-scriptlets.js --tagName 1.61.3b4 > ./src/scriptlets.js",
     "package": "./scripts/package.sh"
   },
   "devDependencies": {
@@ -46,6 +45,7 @@
     "@duckduckgo/autoconsent": "^10.17.0",
     "@ghostery/adblocker": "^2.3.0",
     "@ghostery/adblocker-webextension": "^2.3.0",
+    "@ghostery/scriptlets": "github:ghostery/scriptlets#0cb4770",
     "@github/relative-time-element": "^4.4.4",
     "@sentry/browser": "^8.42.0",
     "@whotracksme/reporting": "^5.2.0",
