--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@duckduckgo/autoconsent": "^10.17.0",
     "@ghostery/adblocker": "^2.3.0",
     "@ghostery/adblocker-webextension": "^2.3.0",
+    "@ghostery/scriptlets": "github:ghostery/scriptlets#29c825e",
     "@github/relative-time-element": "^4.4.4",
     "@sentry/browser": "^8.42.0",
     "@whotracksme/reporting": "^5.2.0",
@@ -66,5 +67,5 @@
     "email": "info@ghostery.com",
     "url": "https://www.ghostery.com"
   },
-  "license": "MPL-2.0"
+  "license": "GPL-3.0"
 }
