feat(panel): Add the "Report a broken page" view

--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -11,6 +11,7 @@
     "storage",
     "scripting",
     "tabs",
+    "activeTab",
     "webNavigation",
     "webRequest",
     "webRequestBlocking",
