--- a/src/manifest.safari.json
+++ b/src/manifest.safari.json
@@ -13,7 +13,8 @@
     "webNavigation",
     "storage",
     "scripting",
-    "tabs"
+    "tabs",
+    "activeTab"
   ],
   "host_permissions": [
     "http://*/*",
